small fixes in adaptive

--- a/src/components/employees-list-item/employees-list-item.css
+++ b/src/components/employees-list-item/employees-list-item.css
@@ -13,7 +13,7 @@
     line-height: 35px;
     font-size: 20px;
     cursor: pointer;
-    min-width: 550px;
+    width: 100%;
 }
 
 .list-group-item input {
@@ -63,7 +63,7 @@
 .list-group-item.increase .list-group-item-label, .list-group-item.increase .list-group-item-input {
     color: #e09f3e;
 }
-  
+
 .list-group-item.increase .btn-star {
     color: #aeaeae;
 }
