--- a/src/components/search-panel/search-panel.css
+++ b/src/components/search-panel/search-panel.css
@@ -1,8 +1,11 @@
 .search-panel {
-    margin-top: 30px;
+    margin-bottom: 30px;
     padding: 25px;
     background-color: #703c9a;
     border-radius: 4px;
     box-shadow: 15px 15px 30px rgba(0,0,0, .15);
     color: white;
+}
+.search-input {
+  margin-bottom: 20px;
 }
